Basic multiroot UI
Adapt RootAnchorPoller to multiroot
Rework DefaultDaemonMonitor to cooperate better
with RootAnchorPoller
Refactor IRelocator implementations and correctly
bind them in storage modules (instead of multiplicity
modules).
Adapt HdRelocateRootAnchor to multiroot
Adapt shell to multiroot
Change aux root location to allow each root anchor
to have its own auxroot (allows external roots on
different partitions/disks)

Change-Id: I339215d32e6b25266df6654841e2d15118e2fa22